--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Gustav
 middle_name: Brieghel
 last_name: Jensen
-email: gbjensen8@gmail.com
+email: gustav@gustavjensen.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   The personal website of Gustav Brieghel Jensen
 footer_text: 
